# BasicNetApp

./: .gitignore  README.md
libs/: CMakeLists.txt
libs/cmake/: NetworkingLibConfig.cmake
libs/include/NetworkingLib/: Shared.h  SocketAddress.h  SocketUtilities.h  TCPSocket.h  UDPSocket.h
libs/src/: SocketAddress.cpp  SocketUtilities.cpp  TCPSocket.cpp  UDPSocket.cpp
tests/: CMakeLists.txt
tests/src/: HelloWorld.cpp
